base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homebridge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homebridge
    spec:
      containers:
        - name: homebridge
          image: homebridge/homebridge
          ports:
            - name: ui
              containerPort: 8581
          volumeMounts:
            - name: homebridge-data
              mountPath: /homebridge
          resources:
            requests:
              cpu: '2'
              memory: 1Gi
            limits:
              cpu: '4'
              memory: 2Gi
      volumes:
        - name: homebridge-data
          persistentVolumeClaim:
            claimName: homebridge-pvc
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
