base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
  labels:
    app.kubernetes.io/name: homebridge
spec:
  selector:
    app.kubernetes.io/name: homebridge
  ports:
    - port: 8581
      targetPort: ui
      protocol: TCP
      name: http
