base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebridge
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Bringing HomeKit support where there is none
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/name: Homebridge
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-http-gateway
      namespace: istio-ingress
  hostnames: []
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - group: ''
          kind: Service
          name: homebridge
          port: 8581
          weight: 1
